- Fixed a bug with the header on mobile browser safari. - Fixed a bug where the mobile doc nav is not full width - Some mobile improvements - Fixed a mobile responsive issue with the hero

--- a/website/static/css/pages/docs/main.css
+++ b/website/static/css/pages/docs/main.css
@@ -2,3 +2,16 @@
 .edit-page-link {
   margin-right: 0;
 }
+
+.docs-prevnext {
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .docs-prevnext .docs-prev.button {
+    width: 100%;
+  }
+  .docs-prevnext .docs-next.button {
+    width: 100%;
+  }
+}
