--- a/website/static/css/pages/index/hero.css
+++ b/website/static/css/pages/index/hero.css
@@ -1,12 +1,17 @@
 hero {
   display: block;
-  height: 450px;
-  padding-top: 40px;
+
+  height: auto;
+
+  padding: 80px 0 40px;
+
   background: var(--dark);
-  background-image: url("/img/hero.jpg");
+  background-image: url('/img/hero.jpg');
   background-position: center bottom;
   background-size: cover;
+
   color: var(--light);
+
   text-align: left;
 }
 
@@ -18,19 +23,38 @@ hero .row {
 hero h1 {
   margin-top: 0;
   margin-bottom: 15px;
-  font-size: 60px;
+
+  font-size: 40px;
   font-weight: 700;
 }
 
 hero h2 {
   margin-top: 0;
-  margin-bottom: 45px;
-  opacity: 0.3;
-  font-size: 40px;
+  margin-bottom: 20px;
+
+  opacity: .3;
+
+  font-size: 25px;
 }
 
 hero .logoWrapper img {
   width: 260px;
+}
+
+@media (min-width: 576px) {
+  hero {
+    height: 450px;
+
+    padding: 40px 0 0;
+  }
+  hero h1 {
+    font-size: 60px;
+  }
+  hero h2 {
+    margin-bottom: 45px;
+
+    font-size: 40px;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
